Update news dashboard

--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
     </div>
     
     </div>
+    <p class="timestamp">2025-04-20</p>
     
     <!-- Chatbot UI - Added title attribute and more visible text -->
     <button class="chat-toggle-button" title="Open Chat Assistant">💬</button>
