Update news dashboard

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
     </div>
     
     </div>
-    <p class="timestamp">Last updated: 2025-05-01<br>Please reload this web page by pressing Command ⌘ or Control + R keys if date appears older than a week.</p>
+    <p class="timestamp">Last updated: 2025-05-01<br>Please reload this web page by pressing Command (⌘)-R on Mac or Ctrl+R on Windows keys if date appears older than a week.</p>
     
     <!-- Chatbot UI - Added title attribute and more visible text -->
     <button class="chat-toggle-button" title="Open Chat Assistant">💬</button>
